<?xml version="1.0" encoding="utf-8"?>
<io.codetail.widget.RevealFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:showIn="@layout/login_view"
    android:layout_gravity="center"
    android:visibility="gone">
    <android.support.v7.widget.CardView
        android:id="@+id/register_card"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/jc_subjects_header"
            android:fillViewport="true"
            android:layout_centerInParent="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/appleWhite"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/register_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/register"
                            android:textColor="@color/material_login_login_color"
                            android:textSize="24sp" />
                        <ImageView
                            android:id="@+id/register_cancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:rotation="45"
                            android:src="@drawable/ic_add_white_24dp"
                            android:tint="@color/material_login_login_color" />
                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/register_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        app:errorTextAppearance="@style/MaterialLoginTheme.TextAppearanceRegisterError"
                        app:theme="@style/MaterialLoginTheme.TextAppearanceRegister">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:textColor="@color/material_login_login_color"
                            android:textSize="15sp"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/register_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        app:errorTextAppearance="@style/MaterialLoginTheme.TextAppearanceRegisterError"
                        app:theme="@style/MaterialLoginTheme.TextAppearanceRegister">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/userName"
                            android:textColor="@color/material_login_login_color"
                            android:textSize="15sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/register_cellNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        app:errorTextAppearance="@style/MaterialLoginTheme.TextAppearanceRegisterError"
                        app:theme="@style/MaterialLoginTheme.TextAppearanceRegister">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cellNumber"
                            android:inputType="number"
                            android:textColor="@color/material_login_login_color"
                            android:textSize="15sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/register_service_provider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        app:errorTextAppearance="@style/MaterialLoginTheme.TextAppearanceRegisterError"
                        app:theme="@style/MaterialLoginTheme.TextAppearanceRegister">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/serviceProvider"
                            android:textColor="@color/material_login_login_color"
                            android:textSize="15sp" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/register_service_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        app:errorTextAppearance="@style/MaterialLoginTheme.TextAppearanceRegisterError"
                        app:theme="@style/MaterialLoginTheme.TextAppearanceRegister">
                        <Spinner
                            android:layout_width="match_parent"
                            android:id="@+id/spins"
                            android:layout_height="wrap_content"
                            android:hint="@string/serviceCategory"
                            android:textColor="@color/material_login_login_color"
                            android:textSize="15sp" />
                    </android.support.design.widget.TextInputLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/material_login_login_color">
                        <TextView
                            android:id="@+id/register_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:gravity="center_horizontal"
                            android:padding="10dp"
                            android:text="@string/next"
                            android:textColor="@color/material_login_register_color"
                            android:textSize="20sp" />
                    </FrameLayout>
                </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</io.codetail.widget.RevealFrameLayout>